--- a/homeworks/week9/package.json
+++ b/homeworks/week9/package.json
@@ -1,26 +1,31 @@
 {
   "name": "week9",
   "version": "1.0.0",
-  "description": "week9hw",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Coding Joy",
-  "license": "ISC",
-  "devDependencies": {
+  "description": "## hw1：CSS 預處理器",
+  "main": "LidemyOJ練習區.js",
+  "dependencies": {
     "autoprefixer": "^9.4.5",
+    "babel": "^6.23.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
+    "gulp-postcss": "^8.0.0",
     "postcss": "^7.0.11",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0"
   },
-  "dependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/npm/cli.git"
-  }
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d lib"
+  },
+  "author": "",
+  "license": "ISC"
 }
